Se elimina web component (prueba)

--- a/frontend/civica-card-reload-wc/elements/index.html
+++ b/frontend/civica-card-reload-wc/elements/index.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Test Angular Elements - Framework Poll</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="https://pyxis.nebulae.com.co/emi/assets/civica-card-reload-pos/styles.css">
 </head>
 <body>
     <afcc-reloader width='400' height='500'></afcc-reloader>
-    <script src="afcc-reloader.js"></script>
+    <script src="https://pyxis.nebulae.com.co/emi/assets/civica-card-reload-pos/afcc-reloader.js"></script>
     <script>
       const afccReloader = document.querySelector('afcc-reloader');
       afccReloader.addEventListener('reloaderConnected', (event) => {
