--- a/frontend/civica-card-reload-wc/src/index.html
+++ b/frontend/civica-card-reload-wc/src/index.html
@@ -7,7 +7,7 @@
 
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="icon" type="image/x-icon" href="favicon.ico" />
-    <script type="text/javascript" src="https://unpkg.com/zone.js"></script>
+    <link href="./assets/civica-card-reload-pos/styles.css" rel="stylesheet">
   </head>
   <body>
     <afcc-reloader
